--- a/kids/backpack-boy.html
+++ b/kids/backpack-boy.html
@@ -9,17 +9,16 @@
     body{
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial,
                    "PingFang SC", "Microsoft YaHei", sans-serif;
-      background:#f3f7fb;
+      background:#f5f7fb;
       margin:0;
       padding:20px;
       text-align:center;
-      color:#222;
     }
 
     .card{
       max-width:460px;
       margin:auto;
-      background:#ffffff;
+      background:white;
       padding:24px;
       border-radius:20px;
       box-shadow:0 6px 20px rgba(0,0,0,0.12);
@@ -33,58 +32,73 @@
       margin-bottom:8px;
     }
 
-    .avatar{
-      width:72px;
-      height:72px;
-      margin-bottom:4px;
+    .emoji{
+      font-size:64px;
+      line-height:1;
     }
 
-    .tag-indicator{
-      font-size:14px;
-      color:#1565c0;
+    .badge{
       background:#e3f2fd;
-      padding:6px 12px;
+      color:#0d47a1;
+      padding:8px 14px;
       border-radius:999px;
       font-weight:700;
-      display:inline-flex;
-      align-items:center;
-      gap:6px;
+      font-size:14px;
+      border:1px solid #bbdefb;
     }
 
     h1{
       margin:6px 0 4px;
-      color:#1565c0;
+      color:#d32f2f;
       font-size:28px;
     }
 
     .subtitle{
       font-size:14px;
-      color:#555;
+      color:#666;
       margin-bottom:10px;
     }
 
     .msg{
       font-size:16px;
       line-height:1.6;
+      color:#222;
       margin:10px 0;
     }
 
     .divider{
       height:1px;
-      background:#e0e0e0;
+      background:#eee;
       margin:18px 0;
+    }
+
+    .lang{
+      text-align:left;
+      margin-bottom:10px;
+    }
+
+    .lang h2{
+      font-size:15px;
+      margin:0 0 6px;
+    }
+
+    .lang p{
+      font-size:15px;
+      line-height:1.6;
+      margin:0;
     }
 
     .item{
       display:flex;
       align-items:center;
       gap:10px;
-      background:#f5f9ff;
-      border:1px solid #dbe7f6;
+      background:#fafafa;
+      border:1px solid #eee;
       border-radius:14px;
       padding:12px;
       margin:10px 0;
       font-size:15px;
+      color:#333;
     }
 
     .icon{
@@ -94,22 +108,19 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      background:#e3f2fd;
-      color:#0d47a1;
+      font-size:16px;
       flex-shrink:0;
     }
 
-    .icon.email{
-      background:#e8eaf6;
-      color:#283593;
-    }
+    .icon.phone{ background:#e8f5e9; color:#1b5e20; }
+    .icon.email{ background:#ede7f6; color:#6a1b9a; }
 
     a.button{
       display:block;
-      margin:12px 0;
-      padding:15px;
+      margin:14px 0;
+      padding:16px;
       border-radius:16px;
-      font-size:17px;
+      font-size:18px;
       font-weight:800;
       color:white;
       text-decoration:none;
@@ -117,88 +128,87 @@
 
     a.call{ background:#1976d2; }
     a.sms{ background:#2e7d32; }
-    a.mail{ background:#3949ab; }
+    a.mail{ background:#6a1b9a; }
 
     .note{
       font-size:13px;
-      color:#666;
+      color:#777;
       line-height:1.55;
       margin-top:14px;
     }
 
+    /* 🌙 Dark mode */
     @media (prefers-color-scheme: dark) {
-      body{ background:#121212; color:#f0f0f0; }
+      body{ background:#121212; }
       .card{ background:#1e1e1e; }
-      h1{ color:#90caf9; }
+      h1{ color:#ff6b6b; }
       .subtitle,.note{ color:#aaa; }
-      .item{ background:#243447; border-color:#2f4a66; }
-      .icon{ background:#2f4a66; color:#90caf9; }
-      .icon.email{ background:#3a3f7a; color:#c5cae9; }
-      .tag-indicator{ background:#1a2a3a; color:#90caf9; }
+      .msg,.lang p,.lang h2{ color:#f0f0f0; }
+      .item{ background:#2a2a2a; border-color:#333; color:#eee; }
+      .icon{ background:#333; }
+      .badge{ background:#1a2a3a; color:#90caf9; border-color:#243a5a; }
     }
   </style>
 </head>
 
 <body>
   <div class="card">
+    <div class="top">
+      <div class="emoji">🧒🎒</div>
+      <div class="badge">Emergency Contact</div>
+      <h1>Child Emergency Info</h1>
+      <div class="subtitle">紧急联系方式</div>
+    </div>
 
-    <!-- 👦🏻 Boy avatar -->
-    <svg class="avatar" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" aria-label="Child avatar">
-      <circle cx="50" cy="40" r="22" fill="#fde7d9"/>
-      <path d="M28 36c2-14 42-14 44 0v6c-4-8-36-8-44 0z" fill="#1c1c1c"/>
-      <circle cx="42" cy="42" r="2.3" fill="#1a1a1a"/>
-      <circle cx="58" cy="42" r="2.3" fill="#1a1a1a"/>
-      <path d="M43 49c4 3 10 3 14 0" stroke="#aa7b6a" stroke-width="2" fill="none" stroke-linecap="round"/>
-      <rect x="26" y="64" width="48" height="28" rx="14" fill="#bbdefb"/>
-    </svg>
-
-    <div class="tag-indicator">🧷 Child Safety Tag · 儿童安全联系标签</div>
-
-    <h1>Child Emergency Info</h1>
-    <div class="subtitle">紧急联系方式</div>
-
-    <p class="msg">
-      This item belongs to a child.<br>
-      If the child needs help or this item is found, please contact a parent.
-    </p>
+    <!-- English -->
+    <div class="lang">
+      <h2>English</h2>
+      <p class="msg">
+        This bag belongs to a child.<br>
+        If the child needs help or this bag is found, please contact a parent.
+      </p>
+    </div>
 
     <div class="divider"></div>
 
-    <!-- Contact info -->
-    <div class="item">
-      <span class="icon">📞</span>
-      Parent 1: +1 (602) 814-1450
+    <!-- Chinese -->
+    <div class="lang">
+      <h2>中文</h2>
+      <p class="msg">
+        这是一个孩子的书包或背包。<br>
+        如果孩子需要帮助，或你找到了这个包，请联系家长。
+      </p>
     </div>
 
+    <div class="divider"></div>
+
+    <!-- Contact -->
     <div class="item">
-      <span class="icon">📞</span>
-      Parent 2: +1 (213) 880-4979
+      <span class="icon phone">📞</span>
+      +1 (602) 814-1450
     </div>
 
     <div class="item">
       <span class="icon email">✉️</span>
-      yiwawang@gmail.com · tuo.gio.wang@gmail.com
+      yiwawang@gmail.com
     </div>
 
-    <!-- Buttons -->
-    <a class="button call" href="tel:16028141450">📞 Call Parent 1</a>
-    <a class="button call" href="tel:12138804979">📞 Call Parent 2</a>
+    <a class="button call" href="tel:16028141450">📞 Call Parent</a>
 
     <a class="button sms"
-       href="sms:16028141450,12138804979?body=Hello,%20I%20found%20a%20child's%20item%20or%20the%20child%20may%20need%20help.">
-       💬 Text Parents
+       href="sms:16028141450?body=Hello,%20I%20found%20your%20child's%20bag%20or%20your%20child%20may%20need%20help.">
+       💬 Send Message
     </a>
 
     <a class="button mail"
-       href="mailto:yiwawang@gmail.com,tuo.gio.wang@gmail.com?subject=Child%20Emergency%20Contact">
-       ✉️ Email Parents
+       href="mailto:yiwawang@gmail.com?subject=Child%20Emergency%20Contact">
+       ✉️ Email Parent
     </a>
 
     <div class="note">
       Thank you for helping keep a child safe.<br>
       感谢你帮助孩子的安全。
     </div>
-
   </div>
 </body>
 </html>
