--- a/kids/emergency.html
+++ b/kids/emergency.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Emergency Contact / 紧急联系方式</title>
+  <title>Emergency Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -29,10 +29,10 @@
       flex-direction: column;
       align-items: center;
       gap: 10px;
-      margin-bottom: 12px;
+      margin-bottom: 14px;
     }
 
-    .avatar {
+    .icon-alert {
       width: 72px;
       height: 72px;
     }
@@ -41,7 +41,7 @@
       font-size: 14px;
       color: #b71c1c;
       background: #fdecea;
-      padding: 6px 12px;
+      padding: 6px 14px;
       border-radius: 999px;
       font-weight: 700;
       display: inline-flex;
@@ -63,7 +63,7 @@
       text-align: center;
     }
 
-    /* LEFT-ALIGNED NOTICE TEXT */
+    /* LEFT-ALIGNED NOTICE */
     .notice {
       font-size: 16px;
       line-height: 1.6;
@@ -182,16 +182,16 @@
 
     <div class="top">
 
-      <!-- 🆘 Emergency icon -->
-      <svg class="avatar" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
-           aria-label="Emergency Contact" role="img">
+      <!-- ❗ Emergency icon -->
+      <svg class="icon-alert" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
+           aria-label="Please Contact Parent" role="img">
         <circle cx="50" cy="50" r="46" fill="#d32f2f"/>
         <circle cx="50" cy="50" r="40" fill="none" stroke="#ffffff" stroke-width="4"/>
         <rect x="47" y="24" width="6" height="34" rx="3" fill="#ffffff"/>
         <circle cx="50" cy="68" r="4" fill="#ffffff"/>
       </svg>
 
-      <div class="tag-indicator">🆘 Emergency Contact Tag · 紧急联系标签</div>
+      <div class="tag-indicator">❗ Please Contact Parent</div>
       <h1>Emergency Contact</h1>
       <div class="subtitle">紧急联系方式</div>
     </div>
