--- a/kids/emergency.html
+++ b/kids/emergency.html
@@ -44,9 +44,6 @@
       padding: 6px 14px;
       border-radius: 999px;
       font-weight: 700;
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
     }
 
     h1 {
@@ -63,53 +60,17 @@
       text-align: center;
     }
 
-    /* LEFT-ALIGNED NOTICE */
     .notice {
       font-size: 16px;
       line-height: 1.6;
-      margin: 12px 0;
+      margin: 12px 0 18px;
       text-align: left;
-    }
-
-    .divider {
-      height: 1px;
-      background: #e0e0e0;
-      margin: 18px 0;
-    }
-
-    .item {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      background: #f5f9ff;
-      border: 1px solid #dbe7f6;
-      border-radius: 14px;
-      padding: 12px;
-      margin: 10px 0;
-      font-size: 15px;
-    }
-
-    .icon {
-      width: 32px;
-      height: 32px;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #e3f2fd;
-      color: #0d47a1;
-      flex-shrink: 0;
-    }
-
-    .icon.email {
-      background: #ede7f6;
-      color: #6a1b9a;
     }
 
     a.button {
       display: block;
       margin: 12px 0;
-      padding: 15px;
+      padding: 16px;
       border-radius: 16px;
       font-size: 17px;
       font-weight: 800;
@@ -126,53 +87,17 @@
       font-size: 13px;
       color: #666;
       line-height: 1.55;
-      margin-top: 14px;
+      margin-top: 16px;
       text-align: left;
     }
 
-    /* 🌙 DARK MODE */
     @media (prefers-color-scheme: dark) {
-      body {
-        background: #121212;
-        color: #f0f0f0;
-      }
-
-      .card {
-        background: #1e1e1e;
-      }
-
-      h1 {
-        color: #ff6b6b;
-      }
-
-      .subtitle,
-      .note {
-        color: #aaa;
-      }
-
-      .notice {
-        color: #f0f0f0;
-      }
-
-      .item {
-        background: #243447;
-        border-color: #2f4a66;
-      }
-
-      .icon {
-        background: #2f4a66;
-        color: #90caf9;
-      }
-
-      .icon.email {
-        background: #3a2a4a;
-        color: #e1bee7;
-      }
-
-      .tag-indicator {
-        background: #3a1a1a;
-        color: #ffb3b3;
-      }
+      body { background: #121212; color: #f0f0f0; }
+      .card { background: #1e1e1e; }
+      h1 { color: #ff6b6b; }
+      .subtitle, .note { color: #aaa; }
+      .notice { color: #f0f0f0; }
+      .tag-indicator { background: #3a1a1a; color: #ffb3b3; }
     }
   </style>
 </head>
@@ -181,7 +106,6 @@
   <div class="card">
 
     <div class="top">
-
       <!-- ❗ Emergency icon -->
       <svg class="icon-alert" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
            aria-label="Please Contact Parent" role="img">
@@ -196,37 +120,18 @@
       <div class="subtitle">紧急联系方式</div>
     </div>
 
-    <!-- LEFT-ALIGNED NOTICE -->
     <p class="notice">
       This item belongs to a child.<br>
       If the child needs help or this item is found, please contact a parent.
     </p>
 
-    <div class="divider"></div>
-
-    <!-- Contact info -->
-    <div class="item">
-      <span class="icon">📞</span>
-      Parent 1: +1 (602) 814-1450
-    </div>
-
-    <div class="item">
-      <span class="icon">📞</span>
-      Parent 2: +1 (213) 880-4979
-    </div>
-
-    <div class="item">
-      <span class="icon email">✉️</span>
-      yiwawang@gmail.com · tuo.gio.wang@gmail.com
-    </div>
-
-    <!-- Buttons -->
+    <!-- Action buttons only -->
     <a class="button call" href="tel:16028141450">📞 Call Parent 1</a>
     <a class="button call" href="tel:12138804979">📞 Call Parent 2</a>
 
     <a class="button sms"
-       href="sms:16028141450,12138804979?body=Hello,%20I%20found%20a%20child's%20item%20or%20the%20child%20may%20need%20help.">
-       💬 Text Parents
+       href="sms:&to=16028141450,12138804979&body=Hello%20I%20found%20a%20child%27s%20item%20or%20the%20child%20may%20need%20help.">
+       💬 Text Both Parents
     </a>
 
     <a class="button mail"
