--- a/missing-luggage.html
+++ b/missing-luggage.html
@@ -150,4 +150,31 @@
     </div>
 
     <div class="notice">
-      <p>This luggage
+      <p>This luggage appears to be misplaced.</p>
+      <p>If you found it, I would really appreciate your help in contacting me.</p>
+    </div>
+
+    <div class="btn-row">
+      <a class="btn call" href="tel:16028141450">
+        📞 Call
+      </a>
+
+      <a class="btn sms"
+         href="sms:16028141450?body=Hello%2C%20I%20found%20your%20luggage.%20Please%20contact%20me.%20Thank%20you.">
+        💬 Text
+      </a>
+
+      <a class="btn mail"
+         href="mailto:yiwawang@gmail.com?subject=Found%20your%20luggage&body=Hello%2C%0A%0AI%20found%20your%20luggage.%20Please%20contact%20me.%0A%0AThank%20you.">
+        ✉️ Email
+      </a>
+    </div>
+
+    <div class="note">
+      If it’s more convenient, please keep the luggage safe and contact me when you can.<br>
+      Thank you very much for your kindness.
+    </div>
+
+  </div>
+</body>
+</html>
